# real-rust-redirect-reqwest

./: Cargo.toml
.github/workflows/: cargo.yml
src/: main.rs
