[package]
name = "rust-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"                                     # For web server
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
tokio = { version = "1", features = ["full"] }
